	- fix leak with $L expando.
	- fix possible crash with /script reset.
	- ignore exceptions take precedence over ignores in all cases.
	- honour -channels preference for ignore -replies (bug #227).
	- Fix mode display in whois with unreal (379 numeric) (bug #479).
	- Fix regressions that prevented external modules from building/working
	  (bugs #537 #539).

v0.8.12 2007-10-06  The Irssi team <staff@irssi.org>
	+ Some changes to character set recoding.
	+ Rewrite SSL connection/handshake code.
	+ Remove support for glib 1.x.
	+ Do not send our hostname to the server (bug #488).
	+ Add $tag to 'window' item in default configuration.
	+ Pick up host changes on charybdis and ircu servers (396 numeric).
	+ Show various errors such as "cannot send to channel" and "cannot
	  /msg, user is +g" in the channel or query window, if possible,
	  and always include the user or channel name.
	+ Channel forwarding in hyperion and charybdis is now recognized
	  (470 numeric) and the target channel is joined in the window where
	  the original channel would have been joined.
	+ Add support for the ACCEPT command, which is part of the CALLERID
	  server side ignore system in hybrid7 and derived ircds.
	+ Make /WINDOW GOTO start searching at the window after the active
	  one and stop at the one before (bug #332).
	+ Improve completion for /SET.
	+ Use CASEMAPPING dependent comparison to match channel names.
	  Patch by Jon Mayo (bug #436).
	+ Various improvements to the help files.
	+ Add Perl bindings for some gui_entry methods
	+ Make alt/meta+arrow keys work in recent versions of xterm (bug #496)
	- Fix DCC get when file size is 0 (bug #494).
	- Ignore empty lines when pasting.
	- Fix large file support on AIX (bug #404).
	- Remove broken code that prevents unloading of a script in some cases.
	- Fix logging lines with no target to all logs, broken in 0.8.11.
	- Fix casemapping dependent nick and channel matching (bug #436).